# seniority-detector

./: .env.example  .gitignore  README.md  ast_analyzer.py  detector.py  llm_analyzer.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ejemplos/: codigo_junior.py  codigo_senior.py
src/seniority_detector/: __init__.py  cli.py  github_fetcher.py  llm_analyzer.py  pylint_runner.py
src/seniority_detector/prompts/: system_prompt.txt
tests/: test_ast_analyzer.py  test_llm_analyzer.py
